mule-user-guide/v/3.5/servlet-transport-reference.adoc
=  Servlet传输参考

Servlet传输提供了与servlet实现的集成。实现Servlet负责接收请求，然后Servlet传输将请求转交给任何注册的接收方。这个连接器没有调度器的概念，因为它是由请求触发的，可能会或可能不会返回响应。您将servlet URL指定为连接器配置的一部分，然后像任何其他 link:/mule-user-guide/v/3.5/http-transport-reference[HTTP端点]一样指定端点。

== 访问Servlet端点

您可以在Web应用程序中定义一个servlet，将来自客户端的请求连接到Mule servlet端点。

例如在web.xml中：

[source, xml, linenums]
----
<servlet>
<servlet-name>muleServlet</servlet-name>
<servlet-class>org.mule.transport.servlet.MuleReceiverServlet</servlet-class>
<load-on-startup>1</load-on-startup>
</servlet>
 
<servlet-mapping>
<servlet-name>muleServlet</servlet-name>
<url-pattern>/services/*</url-pattern>
</servlet-mapping>
----

使用具有以下模式的URL访问Servlet端点：+
`+http://host:port/webapp-contextname/servlet-name/path+`

哪里：

*  _ host_和_port_  - 您访问应用程序服务器的URL和端口
*  _ webapp-contextname_  - 部署Mule ESB的Web应用程序的上下文名称
*  _ servlet-name_  - 在web.xml中定义的Mule servlet URL
*  _ path_  - 端点中的路径属性

== 的Javadoc

该运输的Javadoc是：

http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/servlet/ServletConnector.html[Mule Servlet运输Javadoc]

http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_servlet/namespace-overview.html[架构描述]

有关在servlet容器中使用Mule的更多信息，请参阅 link:/mule-user-guide/v/3.6/embedding-mule-in-a-java-application-or-webapp[将Mule嵌入到Java应用程序或Web应用程序中]。

= 参考

== 连接器

Servlet连接器是Mule和servlet引擎之间的通道适配器。它允许MuleReceiverServlet查找对通过servlet容器接收到的请求感兴趣的组件。

<connector...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
| servletUrl  |   |否 |   |绑定servlet容器的真实URL。如果没有设置，当使用绑定到servlet端点的CXF时，可能无法正确生成WSDL。
| useCachedHttpServletRequest  |布尔值 |否 | false  |是否使用缓存的http servlet请求
|===

<connector...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

例如：

[source, xml, linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:servlet="http://www.mulesoft.org/schema/mule/servlet"
    xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.6/mule.xsd
       http://www.mulesoft.org/schema/mule/servlet
       http://www.mulesoft.org/schema/mule/servlet/3.6/mule-servlet.xsd">
 
    <servlet:connector name="servletConnector" servletUrl="http://localhost:8888" />
...
----

*Note*：在代码示例中，`spring-beans-current.xsd`是一个占位符。要找到正确的版本，请参阅http://www.springframework.org/schema/beans/。

您还可以将servlet URL指定为端点的一部分：

[source, xml, linenums]
----
<servlet:inbound-endpoint path="http://localhost:8888" />
----

Servlet端点接受与HTTP端点相同的属性和子元素。有关更多信息，请参阅 link:/mule-user-guide/v/3.5/http-transport-reference[HTTP传输参考]。

== 端点

<endpoint...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|路径 |字符串 |是 |   |将服务绑定到的服务器路径。
|===

<endpoint...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

=  Servlet传输

Servlet传输允许Mule组件监听通过servlet请求接收到的事件。

== 连接器

Servlet连接器是Mule和servlet引擎之间的通道适配器。它允许MuleReceiverServlet查找对通过servlet容器接收到的请求感兴趣的组件。

<connector...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
| servletUrl  |   |否 |   |绑定servlet容器的真实URL。如果没有设置，当使用绑定到servlet端点的CXF时，可能无法正确生成WSDL。
| useCachedHttpServletRequest  |布尔值 |否 | false  |是否使用缓存的http servlet请求
|===

<connector...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

== 入站端点

<inbound-endpoint...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|路径 |字符串 |是 |   |将服务绑定到的服务器路径。
|===

<inbound-endpoint...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

== 端点

<endpoint...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|路径 |字符串 |是 |   |将服务绑定到的服务器路径。
|===

<endpoint...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

=== 变压器

这些是这种运输特有的变压器。请注意，这些会在启动时自动添加到Mule注册表中。当进行自动转换时，这些将在搜索正确的变压器时包含在内。

[%header,cols="2*"]
|====
| {名称{1}}说明
| http-request-to-parameter-map  | <http-request-to-parameter-map>转换器返回通过HTTP请求发送的参数的简单地图。如果多次给定相同的参数，则只有第一个值会在Map中。
| http-request-to-input-stream  | <http-request-to-input-stream>转换器将HttpServletRequest转换为InputStream。
| HTTP请求到字节数组 | <http-request-to-byte-array>转换器通过提取请求的有效负载将HttpServletRequest转换为字节数组。
|====
